# Searcher

Finder/: CMakeLists.txt  DatabaseConnection.h  finder.cpp  finder.h  httpserver.h  index.html  logger.h  main.cpp  session.h  utils.h
Spider/: CMakeLists.txt  HTTPclient.cpp  HTTPclient.h  ParcerHTML.cpp  ParcerHTML.h  ParcerINI.cpp  ParcerINI.h  configuration.ini  database.cpp  database.h  indexator.cpp  indexator.h  main.cpp
